# protobuf_upf

./: .gitignore  Cargo.toml  README.md  build.rs  first_setup.sh  requirements.txt
data/: UPF.md  problem.md
python/: basic_problems.py  converter.py  from_protobuf.py  main.py  problem.py  problems.py  to_protobuf.py  upf_pb2.py  upf_pb2_grpc.py
src/: client.rs  lib.rs  main.rs  serialize.rs  server.rs
src/chronicles/: concrete.rs  constraints.rs  mod.rs  templates.rs
src/pddl/: mod.rs  pddl.rs  sexpr.rs
src/upf/: example.proto  example.rs  mod.rs  upf.rs
