[package]
edition = "2021"
name = "protobuf_upf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
prost = "0.9"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"

# server binary
[[bin]]
name = "upf-server"
path = "src/server.rs"

# # client binary
# [[bin]]
#     name = "client"
#     path = "src/upf/client.rs"
